--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -27,3 +27,7 @@ html{
 @import "./components/footer/footer";
 @import "./components/footer/info-list";
 @import "./components/footer/social_network-list";
+
+
+@import "./components/login/login";
+
