--- a/resources/scss/components/panel/_panel.scss
+++ b/resources/scss/components/panel/_panel.scss
@@ -36,3 +36,9 @@
     font-size: 25px;
     margin-bottom: 25px;
 }
+
+.button__logout{
+    display: flex;
+  align-items: center;
+  justify-content: center;
+}
