--- a/resources/scss/components/panel/_panel.scss
+++ b/resources/scss/components/panel/_panel.scss
@@ -9,6 +9,9 @@
     transform: translateX(-50%);
 }
 .produkts{
+    background-color: aliceblue;
+    border-radius: 25px;
+    padding: 25px 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -16,6 +19,40 @@
     align-items: center;   
     margin-top: 50px;    
     gap: 30px;
+}
+.form__nov-product{
+    background-color: black;
+    padding: 25px;
+    width: 300px;
+    height: 400px;
+    border-radius: 25px;
+    text-align: center;
+}
+.product-input{
+    
+    padding: 5px;
+    input{
+        background-color: rgb(15, 18, 20);
+        color: azure;
+        border: 1px solid rgb(86, 77, 31);
+        border-radius: 5px;
+        padding: 5px 5px;
+    }
+    input::placeholder{
+        color: azure;
+
+
+    }
+}
+.form-button-card{
+    display: flex;
+    align-items: center;    
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
 }
 
 .arrow-top-link{
@@ -38,7 +75,19 @@
 }
 
 .button__logout{
-    display: flex;
-  align-items: center;
-  justify-content: center;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    background-color: rgb(66, 161, 243);  
+    color: azure;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+.button__logout:hover{
+    background-color: rgb(229, 169, 95); 
+}
+@media (max-width:560px) {
+    .button__logout{
+        font-size: 16px;
+    }
+    
 }
