--- a/resources/scss/components/main/_catalog.scss
+++ b/resources/scss/components/main/_catalog.scss
@@ -86,8 +86,8 @@
 .product {
     position: relative;
     padding: 16px;
-    border-radius: 4px;
-    background-color: #fff;
+    border-radius: 8px;
+    background-color: #ffffff;
     box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 
@@ -227,7 +227,29 @@
     cursor: pointer;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s;
+    z-index: 99;
 }
+
+.cart-number{
+    position: fixed;
+    bottom: 60px;
+    right: 20px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
+    cursor: pointer;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s;
+    z-index: 100;
+    font-weight: 700;
+}
+
 
 .cart-button:hover {
     background-color: #9900ff;
