--- a/resources/scss/components/panel/_panel.scss
+++ b/resources/scss/components/panel/_panel.scss
@@ -1,14 +1,6 @@
-.button-panel{
-    border: 1px dashed black;
-    padding: 5px 10px;
-}
-.produkt-title{
-    position: absolute;
-    left: 50%;
-    top: 0%;
-    transform: translateX(-50%);
-}
-.produkts{
+.produkts {
+    position: relative;
+    overflow: hidden;
     background-color: aliceblue;
     border-radius: 25px;
     padding: 25px 0;
@@ -16,46 +8,72 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;   
-    margin-top: 50px;    
+    align-items: center;
+    margin-top: 50px;
     gap: 30px;
 }
-.form__nov-product{
-    background-color: black;
+
+.hero-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Видео на заднем плане */
+}
+
+.hero-video video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Видео будет покрывать весь контейнер */
+}
+
+.produkt-title {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    z-index: 1; /* Название поверх видео */
+}
+
+.form__nov-product {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.7); /* Полупрозрачный черный фон */
     padding: 25px;
     width: 300px;
     height: 400px;
     border-radius: 25px;
     text-align: center;
+    z-index: 1; /* Формы будут поверх видео */
 }
-.product-input{
-    
+
+.product-input {
     padding: 5px;
-    input{
+    input {
         background-color: rgb(15, 18, 20);
         color: azure;
         border: 1px solid rgb(86, 77, 31);
         border-radius: 5px;
         padding: 5px 5px;
     }
-    input::placeholder{
+    input::placeholder {
         color: azure;
-
-
     }
 }
-.form-button-card{
+
+.form-button-card {
     display: flex;
-    align-items: center;    
+    align-items: center;
 }
-.buttons{
+
+.buttons {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 15px;
 }
 
-.arrow-top-link{
+.arrow-top-link {
     background-color: aqua;
     z-index: 99;
     position: fixed;
@@ -68,26 +86,28 @@
     width: 50px;
     height: 50px;
 }
-.catalog-title{
+
+.catalog-title {
     text-align: center;
     font-size: 25px;
     margin-bottom: 25px;
 }
 
-.button__logout{
+.button__logout {
     position: absolute;
     left: 20px;
     top: 20px;
-    background-color: rgb(66, 161, 243);  
+    background-color: rgb(66, 161, 243);
     color: azure;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
-.button__logout:hover{
-    background-color: rgb(229, 169, 95); 
+
+.button__logout:hover {
+    background-color: rgb(229, 169, 95);
 }
-@media (max-width:560px) {
-    .button__logout{
+
+@media (max-width: 560px) {
+    .button__logout {
         font-size: 16px;
     }
-    
 }
