added style for order

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -25,6 +25,7 @@ html{
 @import "./components/footer/social_network-list";
 
 
+@import "./components/order";
 @import "./components/login/login";
 @import "./components/panel/panel";
 
