--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1041,27 +1041,7 @@ footer {
   height: 20px;
 }
 
-*,
-*:after,
-*:before {
-  box-sizing: border-box;
-}
-
-ul {
-  padding-left: 10px;
-}
-
-body {
-  font-family: "Josefin Sans", sans-serif;
-  color: #0a0a0a;
-  line-height: 1.4;
-}
-
-a {
-  color: #000;
-}
-
-.content {
+.order-content {
   z-index: 9999;
   color: #fff;
   background-image: url(../../../public/storage/images/order/order-bg.jpg);
@@ -1069,31 +1049,31 @@ a {
   background-size: cover;
 }
 
-.secure,
-.backBtn {
+.go-back-btn,
+.help-circle {
   display: flex;
 }
 
-.secure span,
-.backBtn span {
+.help-circle,
+.go-back-btn {
   margin-left: 5px;
 }
 
-.backBtn {
+.go-back-btn {
   margin-top: 20px;
 }
 
-.secure {
+.help-circle {
   color: #afb5c0;
   align-items: flex-end;
 }
 
-.secure .icon {
+.help-circle .icon {
   font-size: 20px;
   line-height: 20px;
 }
 
-.logo {
+.order-logo {
   font-size: 20px;
   font-weight: bold;
   display: flex;
@@ -1101,24 +1081,19 @@ a {
   align-items: flex-end;
 }
 
-.logo .icon {
+.icon {
   font-size: 32px;
   line-height: 32px;
   margin-right: 5px;
 }
 
-img {
-  width: 100%;
-  border-radius: 8px 0 0 8px;
-}
-
-.container {
+.order-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.details {
+.order-details {
   max-width: 800px;
   min-height: 300px;
   margin-left: auto;
@@ -1129,15 +1104,15 @@ img {
   display: flex;
   flex-direction: column;
   position: relative;
-  z-index: 2; /* Блок details поверх заголовка */
+  z-index: 2;
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
 }
 
-.details__item {
+.order-details__item {
   display: flex;
 }
 
-.details__user {
+.order-details__user {
   background: none;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
@@ -1146,213 +1121,59 @@ img {
   border: 1px solid #dadada;
 }
 
-.item__quantity {
+.order-item__quantity {
   position: absolute;
   right: 50px;
   top: 30px;
   font-size: 20px;
 }
 
-.item__image {
+.order-item__image {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  z-index: 3; /* Помещаем изображение поверх всего остального */
+  z-index: 3;
 }
 
-.item__image .logo {
-  margin-top: -150px; /* Поднимите картинку для наложения */
+.order-item__image .logo {
+  margin-top: -150px;
   margin-left: -200px;
   width: 200px;
 }
 
-.item__details {
+.order-item__details {
   padding: 30px;
 }
 
-.item__title {
+.order-item__title {
   font-size: 28px;
   font-weight: 600;
 }
 
-.item__price {
+.order-item__price {
   font-size: 22px;
   color: #bec3cb;
 }
 
-.icon {
-  font-size: 16px;
-  vertical-align: middle;
-}
-
-header {
-  background-color: #f6f9fc;
-  min-height: 300px; /* Увеличьте высоту заголовка, чтобы создать пространство для наложения */
-  background-image: url("../images/pattern.png");
-  position: relative;
-  z-index: 1; /* Помещаем заголовок ниже блока details */
-}
-
-.container {
-  width: 960px;
-  margin: 0 auto;
-}
-
-.shadow {
-  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
-}
-
-.row {
-  display: flex;
-}
-
-.txt {
-  border-color: #e1e8ee;
-  width: 100%;
-}
-
-.input {
-  border-radius: 5px;
-  border-style: solid;
-  border-width: 2px;
-  height: 48px;
-  padding-left: 15px;
-  font-weight: 600;
-  font-size: 14px;
-  color: #5e6977;
-}
-
-input[type=text] {
-  display: initial;
-  padding: 15px;
-}
-
-.text-validated {
-  border-color: #7dc855;
-  background-image: url("../images/icon-tick.png");
-  background-repeat: no-repeat;
-  background-position: right 18px center;
-}
-
-.ddl {
-  border-color: #f0f4f7;
-  background-color: #f0f4f7;
-  width: 100px;
-  margin-right: 10px;
-}
-
-.title {
-  font-size: 14px;
-  padding-bottom: 8px;
-}
-
-.field {
-  padding-top: 15px;
-  padding-right: 30px;
-  width: 50%;
-}
-
-.field.small {
-  width: auto;
-}
-
-.notification {
-  text-align: center;
-  font-size: 28px;
-  font-weight: 600;
-  display: flex;
-  gap: 15px;
-  justify-content: center;
-  align-items: center;
-}
-
-.notification .icon {
-  font-size: 28px;
-  color: #7dc855;
-  line-height: 28px;
-  margin-right: 10px;
-}
-
-.actions {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 60px 0 40px 0;
-}
-
-.payment {
+.payment-section {
   padding: 20px 0 0 0;
 }
 
-.payment__title {
+.payment-section__title {
   margin: 40px 0 20px 0;
   font-size: 18px;
   display: flex;
   text-align: left;
 }
 
-.payment__title .icon {
-  margin-right: 10px;
-}
-
-.btn {
-  font-family: "Josefin Sans", sans-serif;
-  border-radius: 8px;
-  border: 0;
-  letter-spacing: 1px;
-  color: #fff;
-  background: #246eea;
-  padding: 20px 60px;
-  white-space: nowrap;
-  font-size: 16px;
-  line-height: 1;
-  text-transform: uppercase;
-  transition: all 0.15s ease;
-  text-decoration: none;
-}
-
-.btn .icon {
-  margin-left: 10px;
-  font-size: 20px;
-}
-
-.btn:hover {
-  transform: translateY(-1px);
-  background: #4984ea;
-}
-
-.btn.action__back {
-  background: transparent;
-  color: #a0a0a0;
-}
-
-.payment__types {
+.payment-methods {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.payment__info {
-  display: flex;
-}
-
-.payment__cc {
-  flex: 60%;
-}
-
-.payment__shipping {
-  flex: 40%;
-}
-
-.shipping__info {
-  background: #f6f9fc;
-  padding: 10px;
-  border-radius: 8px;
-}
-
-.payment__type {
+.payment-method {
   display: flex;
   border: 2px solid #d9d9d9;
   border-radius: 8px;
@@ -1368,87 +1189,105 @@ input[type=text] {
   transition: all 0.15s ease;
 }
 
-.payment__type:hover {
+.payment-method:hover {
   transform: translateY(-1px);
 }
 
-.payment__type:focus {
+.payment-method:focus {
   border-color: #ff8c45;
-  outline: none; /* Убирает стандартное обрамление для фокуса, если нужно */
+  outline: none;
 }
 
-.payment__type .icon {
-  font-size: 32px;
+.payment-method--blik {
+  color: #2ca8b5;
+}
+
+.payment-method--mastercard {
+  color: #3f4f8b;
+}
+
+.payment-method--visa {
+  color: #1e3695;
+}
+
+.payment-method--blik.active {
+  border-color: #2ca8b5;
+}
+
+.payment-method--mastercard.active {
+  border-color: #3f4f8b;
+}
+
+.payment-method--visa.active {
+  border-color: #1e3695;
+}
+
+.payment-method__image {
+  width: 45px;
   margin-right: 10px;
 }
 
-.payment__type + .payment__type {
-  margin-left: 10px;
+.payment-method__title {
+  font-size: 22px;
 }
 
-.icon-xl {
-  font-size: 48px;
-  line-height: 48px;
+.payment-method__price {
+  font-size: 20px;
+  font-weight: 500;
 }
 
-.content {
-  display: block;
+.payment-methods {
+  margin-bottom: 10px;
 }
 
-.thankyou {
-  display: block;
+.payment-methods .payment-method.active {
+  transform: translateY(-2px);
 }
 
-.thankyou .details {
-  opacity: 1;
-  justify-content: center;
-  align-items: center;
+.payment-methods .payment-method:not(.active) {
+  color: #d9d9d9;
 }
 
-.thankyou .details h3 {
-  font-weight: 600;
+.payment-methods .payment-method--blik.active {
+  background: linear-gradient(152deg, #09b8ab, #21b0b0, #1b9e9e);
+  color: #fff;
 }
 
-.thankyou .details__item {
+.payment-methods .payment-method--mastercard.active {
+  background: linear-gradient(152deg, #4151c1, #3f54c3, #3f4f8b);
+}
+
+.payment-methods .payment-method--visa.active {
+  background: linear-gradient(152deg, #00a2e5, #0b96cf, #1e3695);
+}
+
+.payment-section__info {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.thankyou .details__item .icon-xl {
-  font-size: 32px;
-  color: #7dc855;
-  line-height: 32px;
+.payment-info__cc .form-cc .form-title {
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-weight: 500;
 }
 
-.loading {
-  position: relative;
+.payment-info__cc .form-cc {
+  padding: 15px;
+  border-radius: 10px;
 }
 
-.loading:after {
-  animation: spinAround 0.5s infinite linear;
-  border: 4px solid #7dc855;
-  border-radius: 290486px;
-  border-right-color: transparent;
-  border-top-color: transparent;
-  content: "";
-  height: 5em;
-  width: 5em;
-  position: absolute;
+.payment-info__cc .form-cc .form-title {
+  margin-bottom: 5px;
 }
 
-.loading .details__item {
-  opacity: 0;
+.payment-info__cc .form-row .form-field {
+  width: 100%;
 }
-@keyframes spinAround {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(359deg);
-  }
+
+.payment-info__cc .form-row .form-field.small {
+  width: 48%;
 }
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
