styles for delete from cart button

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -513,6 +513,22 @@ body::-webkit-scrollbar-thumb {
   margin: 0 8px 16px;
 }
 
+.delete-from-cart{
+    color: white;
+    background-color: #f63535;
+    border-radius: 5px;
+    font-size: 15px;
+    padding: 4px;
+    width: 145px;
+    height: 34px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.delete-from-cart:hover {
+    background-color: darkred;
+}
+
 .product {
   position: relative;
   padding: 16px;
